kubernetes/apps/default/ntfy/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          args:
            - serve
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache
