kubernetes/apps/default/ntfy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ntfy
